--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.locationtech.proj4j</groupId>
+			<artifactId>proj4j</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 
 	</dependencies>
 
