--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-kakao-maps-sdk": "^1.2.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "sass": "^1.93.3",
